--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
                     </ul>
                     </li>
                  </ul>
-
                 <h4 style="padding-top: 20px;">Overview of Achievements and Milestones:</h4>
                 <ul>
                     <li style="padding-top: 20px;">Twinco Pte Ltd’s journey is marked by numerous milestones, reflecting its commitment to excellence and customer satisfaction.</li>
@@ -96,15 +95,12 @@
                 <h4 style="padding-top: 20px;">Plate Heat Exchanger</h4>
                 <p style="padding-top: 18px;"><b>Innovative Feature:</b> Compact design with high thermal efficiency and low fouling characteristics.</p>
                 <p style="padding-top: 0px;"><b>Benefits:</b> Maximizes heat transfer efficiency in marine HVAC and cooling systems while minimizing space requirements. The low fouling characteristics reduce maintenance frequency and downtime, ensuring reliable and efficient operation throughout the vessel’s lifecycle.</p>
-                
                 <h4 style="padding-top: 20px;">Automatic Fuel Sampler</h4>
                 <p style="padding-top: 18px;"><b>Innovative Feature:</b> Automated sampling process with real-time data monitoring and analysis capabilities.</p>
                 <p style="padding-top: 0px;"><b>Benefits:</b> Provides accurate and timely assessment of fuel quality, enabling proactive maintenance and troubleshooting. Real-time data monitoring ensures compliance with fuel quality standards and helps optimize engine performance, leading to fuel savings and reduced emissions.</p>
-
                 <h4 style="padding-top: 20px;">Bilge Water Separator</h4>
                 <p style="padding-top: 18px;"><b>Innovative Feature:</b> High-efficiency coalescing technology for effective oil and water separation.</p>
                 <p style="padding-top: 0px;"><b>Benefits:</b> Achieves stringent discharge standards by efficiently removing oil and contaminants from bilge water, minimizing environmental impact and regulatory compliance risks. The high-efficiency coalescing technology enhances operational reliability and reduces maintenance requirements, ensuring uninterrupted vessel operations.</p>
-
                 <h4 style="padding-top: 20px;">Fuel & Oil Treatment Plant</h4>
                 <p style="padding-top: 18px;"><b>Innovative Feature:</b> Modular design with customizable configurations for versatile application.</p>
                 <p style="padding-top: 0px;"><b>Benefits:</b> It is adaptable to various vessel types and operational requirements, allowing seamless integration into existing systems. The modular design facilitates scalability and future expansion, ensuring long-term viability and investment protection for shipowners and operators.</p>
@@ -114,7 +110,6 @@
                 </section>
                 <h4 style="padding-top: 20px;">Twinco's Commitment to Excellence</h4>
                 <p style="padding-top: 18px;">Twinco Pte Ltd is steadfastly committed to excellence in its operations, from product design and manufacturing to performance and customer satisfaction.</p>
-
                 <h4 style="padding-top: 20px;">Here's how Twinco upholds this commitment:</h4>
                 <h5 style="font-size: large;">Product Design and Manufacturing</h5>
                 <ul>
@@ -157,10 +152,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Twinco1/">https://baay22.github.io/Twinco1/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Twinco/twinco-1/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Twinco/twinco-1/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Twinco/Twinco1/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Twinco/Twinco1/index.html</a><br>
+                <a target="_bLank" href="https://heartfelt-duckanoo-f9dfaf.netlify.app">https://heartfelt-duckanoo-f9dfaf.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
